--- a/packages/zenn-wysiwyg-editor/src/index.css
+++ b/packages/zenn-wysiwyg-editor/src/index.css
@@ -1,6 +1,7 @@
 @import 'zenn-content-css/lib/index.css';
 
-.tiptap {
+/* .znc のクラスを上書きするため、.znc.tiptapという優先度が高いセレクタにする */
+.znc.tiptap {
   outline: none;
   min-height: 600px;
 
@@ -166,7 +167,7 @@
 }
 
 /* Selection */
-.tiptap {
+.znc.tiptap {
   .ProseMirror-selectednode {
     position: relative;
 
@@ -202,7 +203,7 @@
 }
 
 /* Placeholder */
-.tiptap {
+.znc.tiptap {
   p.is-editor-empty:first-child::before {
     color: #adb5bd;
     content: attr(data-placeholder);
